3.11.0/_sources/gallery/lines_bars_and_markers/barchart.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/barchart.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lines_bars_and_markers_barchart.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_barchart.py:


=============================
Grouped bar chart with labels
=============================

This example shows a how to create a grouped bar chart and how to annotate
bars with labels.

.. GENERATED FROM PYTHON SOURCE LINES 9-35

.. code-block:: Python


    # data from https://allisonhorst.github.io/palmerpenguins/

    import matplotlib.pyplot as plt

    species = ("Adelie", "Chinstrap", "Gentoo")
    penguin_means = {
        'Bill Depth': (18.35, 18.43, 14.98),
        'Bill Length': (38.79, 48.83, 47.50),
        'Flipper Length': (189.95, 195.82, 217.19),
    }

    fig, ax = plt.subplots(layout='constrained')

    res = ax.grouped_bar(penguin_means, tick_labels=species, group_spacing=1)
    for container in res.bar_containers:
        ax.bar_label(container, padding=3)

    # Add some text for labels, title, etc.
    ax.set_ylabel('Length (mm)')
    ax.set_title('Penguin attributes by species')
    ax.legend(loc='upper left', ncols=3)
    ax.set_ylim(0, 250)

    plt.show()




.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_barchart_001.png
   :alt: Penguin attributes by species
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_barchart_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_barchart_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 36-49

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.bar` / `matplotlib.pyplot.bar`
   - `matplotlib.axes.Axes.bar_label` / `matplotlib.pyplot.bar_label`

.. tags::

   component: label
   plot-type: bar
   level: beginner


.. _sphx_glr_download_gallery_lines_bars_and_markers_barchart.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: barchart.ipynb <barchart.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: barchart.py <barchart.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: barchart.zip <barchart.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
